# rules_rocq_rust

./: .gitignore  BUILD.bazel  CHANGELOG.md  CID_CD_SETUP.md  CONTRIBUTING.md  DEBUGGING.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_ISSUES.md  LICENSE  MODULE.bazel  NEXT_STEPS.md  README.md  SECURITY.md  STATUS.md  WORKSPACE  loom_rocq_issue.md  test_basic.bzl  test_integration.bzl  test_local.bzl  test_simple.bzl  test_toolchain.bzl  wrt2_bazel_issue.md  wsc_rocq_issue.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  ci_comprehensive.yml  docs.yml  quick_test.yml  release.yml
checksums/: manage.bzl  registry.bzl
checksums/tools/: ocaml.json  rocq.json  test_tool.json
coq_of_rust/: BUILD.bazel  defs.bzl  extensions.bzl  toolchain.bzl
coq_of_rust/private/: BUILD.bazel  coq_of_rust.bzl  repository.bzl  toolchain.bzl
examples/: README.md
examples/advanced_rust_integration/: README.md  lib.rs
examples/advanced_validation/: advanced_proofs.v  automation_script.v
examples/advanced_validation_example/: example_proofs.v
examples/complete_verification_example/: example_component.wasm  example_rust.rs
examples/pulseengine_integration/: README.md
examples/pulseengine_integration/loom_example/: README.md  optimization_algorithms.v
examples/pulseengine_integration/wsc_example/: README.md  crypto_rust.rs  cryptographic_algorithms.v
examples/rocq_integration_example/: advanced_theorems.v  basic_theorems.v  example_proof.v
examples/rocq_pure/: BUILD.bazel  simple.v
examples/rust_integration/: rust_code.rs  verification_proofs.v
examples/rust_integration_example/: example_proofs.v  simple_rust.rs
examples/rust_to_rocq/: BUILD.bazel  advanced.rs  point.rs  point_proofs.v
examples/rust_verified/: simple_rust.rs  verification_proofs.v
examples/simple_rust_verification/: README.md  simple.rs
examples/wasm_integration_example/: example_component.wasm  wasm_verification_proofs.v
rocq/: BUILD.bazel  defs.bzl  extensions.bzl  proof_validation.bzl  toolchain.bzl  validation.bzl
rocq/advanced_validation/: BUILD.bazel  defs.bzl
rocq/advanced_validation/private/: advanced_validation.bzl
rocq/private/: BUILD.bazel  rocq.bzl  smpl_repository.bzl  toolchain.bzl
rocq_integration/: BUILD.bazel  defs.bzl
rocq_integration/private/: BUILD.bazel  rocq_integration.bzl
rust_integration/: BUILD.bazel  defs.bzl
rust_integration/private/: BUILD.bazel  rust_integration.bzl
scripts/: security_audit.sh  vendor_toolchains.sh  vendor_toolchains_secure.sh
standalone_test/: standalone_test.sh
test/: BUILD.bazel  advanced_validation_test.bzl  coq_of_rust_test.bzl  file_mapping_test.bzl  integration_test.bzl  integration_test_comprehensive.bzl  isolated_test.bzl  minimal_test.bzl  mock_toolchain_test.bzl  real_download_test.bzl  real_toolchain_test.bzl  real_world_test.bzl  rocq_integration_test.bzl  rocq_test.bzl  rust_integration_test.bzl  test.bzl  toolchain_download_test.bzl  toolchain_test.bzl
test/rocq/: BUILD.bazel  simple_test.v  test_loading.bzl
test_releases/: checksums-v1.0.0.txt
test_toolchain_repo/: create_test_releases.py
toolchains/: BUILD.bazel  mock_toolchain.bzl  ocaml_extensions.bzl  ocaml_toolchain.bzl  rocq_nix_toolchain.bzl  rocq_toolchain.bzl  test_real_toolchain.bzl  test_toolchain.bzl  tool_registry.bzl
verification_workflows/: BUILD.bazel  defs.bzl
verification_workflows/private/: BUILD.bazel  verification_workflows.bzl
wasm_integration/: BUILD.bazel  defs.bzl
wasm_integration/private/: BUILD.bazel  wasm_integration.bzl
