"""Bazel Module for Rocq and coq-of-rust Rules

This module provides Bazel rules for Rocq/Coq theorem proving.
Uses nixpkgs for hermetic Coq toolchain installation.
"""

module(
    name = "rules_rocq_rust",
    version = "0.1.0",
    compatibility_level = 1,
)

# Core dependencies
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.0.0")

# Nix integration for hermetic Coq/Rocq toolchain
bazel_dep(name = "rules_nixpkgs_core", version = "0.13.0")

# Configure nixpkgs repository for Coq/Rocq toolchain
nix_repo = use_extension(
    "@rules_nixpkgs_core//extensions:repository.bzl",
    "nix_repo",
)
nix_repo.github(
    name = "nixpkgs",
    org = "NixOS",
    repo = "nixpkgs",
    # nixos-24.11 stable channel
    commit = "d4f247e89f6e10120f911e2e2d2254a050d0f732",
    sha256 = "dee2f93be38d1a63ee9b731fa993f0ac2c60c3a62cca32d4cc64c2ed5b8a8e06",
)
use_repo(nix_repo, "nixpkgs")

# Development dependencies
bazel_dep(name = "buildifier_prebuilt", version = "6.4.0", dev_dependency = True)

# Rocq toolchain extension - uses nixpkgs for hermetic Coq
rocq = use_extension("//rocq:extensions.bzl", "rocq")
rocq.toolchain(
    version = "8.20",  # Coq version from nixpkgs
    strategy = "nix",   # Hermetic nix-based installation
)
use_repo(rocq, "rocq_toolchains")

# Register Rocq toolchain
register_toolchains("@rocq_toolchains//:all")
