"""Bazel Module for Rocq and coq-of-rust Rules

This module provides Bazel rules for Rocq/Coq theorem proving.
Uses nixpkgs for hermetic Coq toolchain installation.

NOTE: The root module must configure nixpkgs - see README.md
"""

module(
    name = "rules_rocq_rust",
    version = "0.1.0",
    compatibility_level = 1,
)

# Core dependencies
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.0.0")

# Nix integration for hermetic Coq/Rocq toolchain
# NOTE: The root module must configure nixpkgs repository
bazel_dep(name = "rules_nixpkgs_core", version = "0.13.0")

# Development dependencies
bazel_dep(name = "buildifier_prebuilt", version = "6.4.0", dev_dependency = True)

# Rocq toolchain extension - uses nixpkgs for hermetic Coq
rocq = use_extension("//rocq:extensions.bzl", "rocq")
rocq.toolchain(
    version = "8.20",  # Coq version from nixpkgs
    strategy = "nix",   # Hermetic nix-based installation
)
use_repo(rocq, "rocq_toolchains")

# Register Rocq toolchain
register_toolchains("@rocq_toolchains//:all")
