"""BUILD file for pure Rocq example.

Demonstrates the rocq_library and rocq_proof_test rules.
"""

load("@rules_rocq_rust//rocq:defs.bzl", "rocq_library", "rocq_proof_test")

# Rocq library compiling the simple.v file
rocq_library(
    name = "simple_theorems",
    srcs = ["simple.v"],
    # No external dependencies for this simple example
)

# Proof test that verifies all proofs in simple.v complete
rocq_proof_test(
    name = "simple_theorems_test",
    srcs = ["simple.v"],
    deps = [":simple_theorems"],  # Depend on the compiled library
)

# Alias for easy testing
alias(
    name = "test",
    actual = ":simple_theorems_test",
    visibility = ["//visibility:public"],
)