"""BUILD file for Rocq rule tests.

Tests the core Rocq rules without requiring actual toolchains.
"""

# Test that rules can be loaded and instantiated
# These tests verify the rule definitions work, even without real toolchains

# Test rocq_library rule
rocq_library(
    name = "test_library",
    srcs = ["simple_test.v"],
)

# Test rocq_proof_test rule
rocq_proof_test(
    name = "test_proof",
    srcs = [],  # Empty for now
)

# Test that we can create aliases
filegroup(
    name = "test_files",
    srcs = ["test.bzl"],
)